--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
+    "body-parser": "^1.20.2",
     "customize-cra": "^1.0.0",
     "docxtemplater": "^3.46.0",
+    "express": "^4.18.2",
     "html-docx-js": "^0.3.1",
     "mammoth": "^1.7.0",
+    "nodemailer": "^6.9.10",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
